<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/nav_booking" />
        <item
            android:id="@+id/nav_consultation"
            android:icon="@drawable/ic_menu_consultation"
            android:title="@string/nav_consultation" />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/nav_notifications" />
    </group>

    <item android:title="Lain - lain">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/about"
                android:title="@string/about" />
            <item
                android:id="@+id/login_btn"
                android:title="@string/login_logout_btn" />
        </menu>
    </item>
</menu>